<resources>
    <string name="app_name">Github Vault</string>
    <string name="title_activity_login">Sign in</string>
    <string name="save_btn">Save</string>
    <string name="title_activity_settings">Settings</string>
    <string name="repositiries_activity">Github Repositories</string>
    <string name="location_activity">Location</string>

    <string name="label0">Owner:</string>
    <string name="label1">Github Repos</string>
    <string name="label2">Language:</string>
    <string name="label3">Created:</string>
    <string name="label4">Branch:</string>
    <string name="login_cred">Github@example.com</string>
    <string name="settings_title">Change login information</string>

    <string name="label_user">E-mail address:</string>
    <string name="label_pass">Password:</string>
    <string name="label_pass_new">New password:</string>
    <string name="label_pass_confirm">Confirm password:</string>

    <string name="label_location">Track current location</string>

    <string name="welcome">Welcome</string>
    <string name="intro">See Github Repositories by searching for username &amp; Feel free to change the login details in settings, have fun!</string>


</resources>
