<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ozaynaci.githubvault.SettingsActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/label_username_settings"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/save_btn"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/input_password_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.381" />

    <EditText
        android:id="@+id/input_username_settings"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_cred"
        android:inputType="textPersonName"
        android:text="@string/login_cred"
        android:textSize="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="86dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/input_password_settings"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/input_password_confirm_settings" />

    <EditText
        android:id="@+id/input_password_confirm_settings"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/input_username_settings" />

    <TextView
        android:id="@+id/label_username_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_user"
        android:textColor="#000"
        android:textSize="12dp"
        android:textStyle="bold"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/input_username_settings"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.18" />

    <TextView
        android:id="@+id/label_password_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/label_pass_new"
        android:textColor="#000"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_username_settings"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/input_password_confirm_settings"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/label_password_confirm_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/label_pass_confirm"
        android:textColor="#000"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/input_password_confirm_settings"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/input_password_settings"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
