<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="103dp"
        android:layout_height="121dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_name"
        android:layout_gravity="right"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        app:srcCompat="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout6"
        android:layout_alignStart="@+id/linearLayout6"
        android:layout_alignTop="@+id/item_results"
        android:weightSum="1">

        <TextView
            android:id="@+id/item_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout6"
            android:layout_alignLeft="@+id/linearLayout4"
            android:layout_alignStart="@+id/linearLayout4"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@+id/label"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="3dp"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignStart="@+id/linearLayout3">

        <TextView
            android:id="@+id/label0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/label0"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@+id/label"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_toRightOf="@+id/profile_img"
        android:layout_toEndOf="@+id/profile_img">

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout3"
            android:layout_alignRight="@+id/linearLayout3"
            android:layout_below="@+id/item_results"
            android:layout_marginRight="5dp"
            android:text="@string/label2"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/item_results2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+id/label"
            android:textSize="10sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:weightSum="1"
        android:layout_above="@+id/linearLayout5"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignStart="@+id/linearLayout3">

        <TextView
            android:id="@+id/label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/label2"
            android:layout_alignStart="@+id/label2"
            android:layout_below="@+id/label2"
            android:layout_marginRight="5dp"
            android:layout_weight="4.10"
            android:text="@string/label3"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/item_results3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+id/label"
            android:textSize="10sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:layout_alignBottom="@+id/profile_img"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_marginBottom="11dp">

        <TextView
            android:id="@+id/label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/label2"
            android:layout_alignStart="@+id/label2"
            android:layout_below="@+id/label2"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/label4"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/item_results4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+id/label"
            android:textSize="10sp"></TextView>

    </LinearLayout>

</RelativeLayout>